# tracecat-registry

./: README.md  pyproject.toml
custom_actions/: threatstream.py
custom_actions/integrations/: akamai.py
custom_actions/templates/detect/lookup_file_hash/: threatstream.yml
custom_actions/templates/detect/lookup_ip_address/: ipinfoio.yml  threatstream.yml
custom_actions/templates/detect/lookup_url/: threatstream.yml
